--- a/.github/workflows/aks-order.yml
+++ b/.github/workflows/aks-order.yml
@@ -1,6 +1,6 @@
 # requires the following secrets:
-# DT_URL
-# DT_TOKEN 
+# DT_BASE_URL
+# DT_API_TOKEN 
 # AZURE_CREDENTIALS
 
 name: Deploy Order Service
@@ -54,8 +54,8 @@ jobs:
     - name: "Dynatrace Deployment Event Order Service"
       uses: dynatrace-oss/dynatrace-github-action@v7
       with:
-        url: '${{ secrets.DT_URL }}'
-        token: '${{ secrets.DT_TOKEN }}'
+        url: '${{ secrets.DT_BASE_URL }}'
+        token: '${{ secrets.DT_API_TOKEN }}'
         events: |
           - type: CUSTOM_DEPLOYMENT
             source: GitHub
@@ -75,8 +75,8 @@ jobs:
     container:
       image: dynatraceace/monaco-runner:release-v1.5.3
       env:
-        DT_BASEURL: ${{ secrets.DT_URL }}
-        DT_API_TOKEN: ${{ secrets.DT_TOKEN }}
+        DT_BASEURL: ${{ secrets.DT_BASE_URL }}
+        DT_API_TOKEN: ${{ secrets.DT_API_TOKEN }}
         NEW_CLI: "1"
     steps:
       - uses: actions/checkout@v2
