--- a/.github/workflows/monaco.yml
+++ b/.github/workflows/monaco.yml
@@ -1,6 +1,6 @@
 # requires the following secrets:
-# DT_URL
-# DT_TOKEN 
+# DT_BASE_URL
+# DT_API_TOKEN 
 
 name: Monaco Test
 on:
@@ -11,8 +11,8 @@ jobs:
     container:
       image: dynatraceace/monaco-runner:release-v1.5.3
       env:
-        DT_BASEURL: ${{ secrets.DT_URL }}
-        DT_API_TOKEN: ${{ secrets.DT_TOKEN }}
+        DT_BASEURL: ${{ secrets.DT_BASE_URL }}
+        DT_API_TOKEN: ${{ secrets.DT_API_TOKEN }}
         NEW_CLI: "1"
     steps:
       # github automatically creates a volume to the checked out code
