--- a/.github/workflows/keptn-onboard.yml
+++ b/.github/workflows/keptn-onboard.yml
@@ -27,7 +27,7 @@ jobs:
         KEPTN_STAGE: ${{ env.KEPTN_STAGE }}
         CONFIGURE_DT_MONITORING: ${{ env.CONFIGURE_DT_MONITORING }}
         DT_CONF_FILE: ${{ env.DT_CONF_FILE }}
-        DT_TENANT: ${{ secrets.DT_BASE_URL }}
+        DT_BASE_URL: ${{ secrets.DT_BASE_URL }}
         DT_API_TOKEN: ${{ secrets.DT_API_TOKEN }}
         KEPTN_SHIPYARD_FILE: ${{ env.KEPTN_SHIPYARD_FILE }}
         DEBUG: ${{ env.DEBUG }}
