--- a/.github/workflows/keptn-onboard.yml
+++ b/.github/workflows/keptn-onboard.yml
@@ -11,8 +11,8 @@ env:
   KEPTN_STAGE: dev
   DEBUG: true
   CONFIGURE_DT_MONITORING: true
-  KEPTN_SHIPYARD_FILE: ./keptn/shipyard.yaml
-  DT_CONF_FILE: ./keptn/dynatrace.conf.yaml
+  KEPTN_SHIPYARD_FILE: /mount/keptn/shipyard.yaml
+  DT_CONF_FILE: /mount/keptn/dynatrace.conf.yaml
 
 jobs:
   build:
@@ -31,16 +31,19 @@ jobs:
         DT_API_TOKEN: ${{ secrets.DT_API_TOKEN }}
         KEPTN_SHIPYARD_FILE: ${{ env.KEPTN_SHIPYARD_FILE }}
         DEBUG: ${{ env.DEBUG }}
+      volumes:
+        - $(pwd):/mount
+
     steps:
       # github automatically creates a volume to the checked out code
       # so we can reference them via ./foldername
       - uses: actions/checkout@v2
 
       - name: ls
-        run: ls -l .
+        run: ls -l /mount
 
       - name: ls keptn
-        run: ls -l ./keptn
+        run: ls -l /mount/keptn
 
       - name: createdynatracesecret
         run: cd /keptn && ./action.sh createdynatracesecret
