--- a/.github/workflows/keptn-onboard.yml
+++ b/.github/workflows/keptn-onboard.yml
@@ -32,12 +32,15 @@ jobs:
         KEPTN_SHIPYARD_FILE: ${{ env.KEPTN_SHIPYARD_FILE }}
         DEBUG: ${{ env.DEBUG }}
       volumes:
-        - /home/runner/work/_temp/_github_workflow:/mount
+        - /home/runner/work/_temp/_github_workflows:/mount
 
     steps:
       # github automatically creates a volume to the checked out code
       # so we can reference them via ./foldername
       - uses: actions/checkout@v2
+
+      - name: pwd
+        run: pwd
 
       - name: ls
         run: ls -l /mount
