--- a/.github/workflows/keptn-onboard.yml
+++ b/.github/workflows/keptn-onboard.yml
@@ -9,10 +9,10 @@ env:
   KEPTN_PROJECT: dt-orders
   KEPTN_SERVICE: catalog
   KEPTN_STAGE: dev
-  DEBUG: true
+  DEBUG: "true"
   CONFIGURE_DT_MONITORING: true
-  KEPTN_SHIPYARD_FILE: /mount/keptn/shipyard.yaml
-  DT_CONF_FILE: /mount/keptn/dynatrace.conf.yaml
+  KEPTN_SHIPYARD_FILE: ./keptn/shipyard.yaml
+  DT_CONF_FILE: .keptn/dynatrace.conf.yaml
 
 jobs:
   build:
@@ -31,8 +31,6 @@ jobs:
         DT_API_TOKEN: ${{ secrets.DT_API_TOKEN }}
         KEPTN_SHIPYARD_FILE: ${{ env.KEPTN_SHIPYARD_FILE }}
         DEBUG: ${{ env.DEBUG }}
-      volumes:
-        - /__w/github-actions/github-actions:/mount
 
     steps:
       # github automatically creates a volume to the checked out code
@@ -43,7 +41,7 @@ jobs:
         run: pwd
 
       - name: ls
-        run: ls -l /mount
+        run: ls -l
 
       #- name: ls keptn
       #  run: ls -l /mount/keptn
