--- a/.github/workflows/keptn-onboard.yml
+++ b/.github/workflows/keptn-onboard.yml
@@ -12,7 +12,7 @@ env:
   DEBUG: "true"
   CONFIGURE_DT_MONITORING: true
   KEPTN_SHIPYARD_FILE: ./keptn/shipyard.yaml
-  DT_CONF_FILE: .keptn/dynatrace.conf.yaml
+  DT_CONF_FILE: ./keptn/dynatrace.conf.yaml
 
 jobs:
   build:
