--- a/.github/workflows/keptn-onboard.yml
+++ b/.github/workflows/keptn-onboard.yml
@@ -11,8 +11,10 @@ env:
   KEPTN_STAGE: dev
   DEBUG: true
   CONFIGURE_DT_MONITORING: true
-  KEPTN_SHIPYARD_FILE: /__w/github-actions/github-actions/keptn/shipyard.yaml
-  DT_CONF_FILE: /__w/github-actions/github-actions/keptn/dynatrace.conf.yaml
+  #KEPTN_SHIPYARD_FILE: /__w/github-actions/github-actions/keptn/shipyard.yaml
+  #DT_CONF_FILE: /__w/github-actions/github-actions/keptn/dynatrace.conf.yaml
+  KEPTN_SHIPYARD_FILE: ./keptn/shipyard.yaml
+  DT_CONF_FILE: ./keptn/dynatrace.conf.yaml
 
 jobs:
   build:
@@ -38,7 +40,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: ls
-        run: ls -l /__w/github-actions/github-actions
+        run: ls -l
 
       - name: cat KEPTN_SHIPYARD_FILE
         run: cat $KEPTN_SHIPYARD_FILE
