--- a/monaco/projects/dt-orders/management-zone/config.yaml
+++ b/monaco/projects/dt-orders/management-zone/config.yaml
@@ -1,9 +1,5 @@
 config:
-  - dt-orders-monolith: "dt-orders-monolith.json"
-  - dt-orders-services: "dt-orders-services.json"
-
-dt-orders-monolith:
-  - name: "dt-orders-monolith"
+  - dt-orders-services: "dt-orders-dev.json"
 
 dt-orders-services:
-  - name: "dt-orders-services"
+  - name: "dt-orders-dev"
