--- a/monaco/projects/dt-orders/slo/config.yaml
+++ b/monaco/projects/dt-orders/slo/config.yaml
@@ -1,11 +1,6 @@
 config:
-  - monolith-slo: "monolith-slo.json"
-  - services-slo: "services-slo.json"
+  - dev-slo: "dev-slo.json"
 
-monolith-slo:
-  - name: "DT-Orders Monolith Error Rate"
-  - mzname: "dt-orders/management-zone/dt-orders-monolith.name"
-
-services-slo:
-  - name: "DT-Orders Services Error Rate"
-  - mzname: "dt-orders/management-zone/dt-orders-services.name"
+dev-slo:
+  - name: "DT-Orders Dev Error Rate"
+  - mzname: "dt-orders/management-zone/dt-orders-dev.name"
