adjust to just one MZ

--- a/monaco/projects/dt-orders/management-zone/config.yaml
+++ b/monaco/projects/dt-orders/management-zone/config.yaml
@@ -1,5 +1,5 @@
 config:
-  - dt-orders-services: "dt-orders-dev.json"
+  - dt-orders-dev: "dt-orders-dev.json"
 
-dt-orders-services:
+dt-orders-dev:
   - name: "dt-orders-dev"
