add synthentic monitor

--- a/manifests/frontend.yml
+++ b/manifests/frontend.yml
@@ -18,8 +18,8 @@ spec:
         app.kubernetes.io/managed-by: helm
         app.kubernetes.io/created-by: dynatrace-demos
       annotations:
-        project: dt-orders
-        service: frontend
+        annotation1: annotation1-value
+        annotation2: annotation2-value
     spec:
       containers:
       - name: frontend
