--- a/.github/workflows/dynatrace-action-metrics.yml
+++ b/.github/workflows/dynatrace-action-metrics.yml
@@ -12,11 +12,19 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+    fail-job:
+      description: 'fail job? (1=yes, 0=no)'     
+      required: true
+      default: '0'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Force fail
+      if: ${{ github.event.inputs.fail-job == '0' }}
+      run: exit 1
       - name: Notify Dynatrace on Build
         uses: dynatrace-oss/dynatrace-github-action@v7
         with:
