--- a/.github/workflows/dynatrace-action-metrics.yml
+++ b/.github/workflows/dynatrace-action-metrics.yml
@@ -17,6 +17,10 @@ on:
         description: 'fail job? (1=yes, 0=no)'     
         required: true
         default: '0'
+      project-name:
+        description: 'Project Name'     
+        required: true
+        default: 'Project 1'
 
 jobs:
   build:
@@ -34,7 +38,7 @@ jobs:
             - metric: "github.build.run"
               value: "1.0"
               dimensions:
-                project: "${{ github.repository }}"
+                project: "${{ github.event.inputs.project-name }}"
                 branch: "${{ github.ref }}"
                 event: "${{ github.event_name }}"
                 owner: "${{ github.repository_owner }}"
@@ -48,7 +52,7 @@ jobs:
             - metric: "github.build.success"
               value: "1.0"
               dimensions:
-                project: "${{ github.repository }}"
+                project: "${{ github.event.inputs.project-name }}"
                 branch: "${{ github.ref }}"
                 event: "${{ github.event_name }}"
                 owner: "${{ github.repository_owner }}"
@@ -62,7 +66,7 @@ jobs:
             - metric: "github.build.fail"
               value: "1.0"
               dimensions:
-                project: "${{ github.repository }}"
+                project: "${{ github.event.inputs.project-name }}"
                 branch: "${{ github.ref }}"
                 event: "${{ github.event_name }}"
                 owner: "${{ github.repository_owner }}"
