--- a/.github/workflows/aks-deploy-all.yml
+++ b/.github/workflows/aks-deploy-all.yml
@@ -37,9 +37,15 @@ jobs:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: ${{ env.CLUSTER_NAME }}
         resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
+
     - name: "Create namespace if doesn't exist"
       run: |
         kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
+
+    - name: "Create k8 rolebinding for dt k8 dashboard"
+      run: |
+        kubectl -n dev delete rolebinding default-view 
+        kubectl -n dev create rolebinding default-view --clusterrole=view --serviceaccount=dev:default
 
     - name: "Deploy frontend"
       uses: azure/k8s-deploy@v1.4
