--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -24,7 +24,7 @@ jobs:
       image: dtdemos/keptn-automation:0.1.0
       env:
         EVALUATION_RULE: ${{ env.EVALUATION_RULE }}
-        KEPTN_BASE_URL: ${{ env.KEPTN_BASE_URL }}
+        KEPTN_BASE_URL: ${{ secrets.KEPTN_BASE_URL }}
         KEPTN_API_TOKEN: ${{ secrets.KEPTN_API_TOKEN }}
         KEPTN_PROJECT: ${{ env.KEPTN_PROJECT }}
         KEPTN_SERVICE: ${{ env.KEPTN_SERVICE }}
