--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -7,17 +7,15 @@ on:
   workflow_dispatch:
 
 env:
-  EVALUATION_RULE: pass_on_warning
-  KEPTN_PROJECT: dynatrace
-  KEPTN_SERVICE: catalog
-  KEPTN_STAGE: quality-gate
+  EVALUATION_RULE: ignore #ignore, pass_on_warning, fail_on_warning
+  KEPTN_PROJECT: dt-orders
+  KEPTN_SERVICE: frontend
+  KEPTN_STAGE: staging
   LABELS: "runId=${{ github.run_id }},executedBy=GitHub,Job=https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"            
   #START: "2021-06-09T21:00:00"
   #END: "2021-06-09T22:00:00"
   TIMEFRAME: 5m
   DEBUG: true
-  KEPTN_BASE_URL: https://fqq58422.cloudautomation.live.dynatrace.com
-
 
 jobs:
   build:
@@ -26,7 +24,7 @@ jobs:
       image: dtdemos/keptn-automation:0.1.0
       env:
         EVALUATION_RULE: ${{ env.EVALUATION_RULE }}
-        KEPTN_BASE_URL: ${{ env.KEPTN_BASE_URL }}
+        KEPTN_BASE_URL: ${{ secrets.KEPTN_BASE_URL }}
         KEPTN_API_TOKEN: ${{ secrets.KEPTN_API_TOKEN }}
         KEPTN_PROJECT: ${{ env.KEPTN_PROJECT }}
         KEPTN_SERVICE: ${{ env.KEPTN_SERVICE }}
@@ -41,5 +39,6 @@ jobs:
     steps:
       - name: keptn get project
         run: keptn.sh get project
+      
       - name: SLO Evaluation
         run: slo-evaluation.sh
