--- a/.github/workflows/keptn-automation-onboard.yml
+++ b/.github/workflows/keptn-automation-onboard.yml
@@ -10,8 +10,8 @@ on:
 
 env:
   KEPTN_PROJECT: dt-orders
-  KEPTN_SERVICE: catalog
-  KEPTN_STAGE: dev
+  KEPTN_SERVICE: frontend
+  KEPTN_STAGE: staging
   KEPTN_SHIPYARD_FILE: ./keptn/shipyard.yaml
   KEPTN_SLO_FILE: ./keptn/slo.yaml
   CONFIGURE_DT_MONITORING: true
@@ -23,7 +23,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: dtdemos/keptn-automation:1
+      image: dtdemos/keptn-automation:0.1.0
       env:
         KEPTN_BASE_URL: ${{ secrets.KEPTN_BASE_URL }}
         KEPTN_API_TOKEN: ${{ secrets.KEPTN_API_TOKEN }}
@@ -31,7 +31,6 @@ jobs:
         KEPTN_PROJECT: ${{ env.KEPTN_PROJECT }}
         KEPTN_SERVICE: ${{ env.KEPTN_SERVICE }}
         KEPTN_STAGE: ${{ env.KEPTN_STAGE }}
-        CONFIGURE_DT_MONITORING: ${{ env.CONFIGURE_DT_MONITORING }}
         DT_CONF_FILE: ${{ env.DT_CONF_FILE }}
         DT_BASE_URL: ${{ secrets.DT_BASE_URL }}
         DT_API_TOKEN: ${{ secrets.DT_API_TOKEN }}
@@ -46,4 +45,13 @@ jobs:
         run: create-dynatrace-secret.sh
 
       - name: keptn onboardservice
-        run: onboard-service.sh
+        run: keptn.sh create project $KEPTN_PROJECT --shipyard=$KEPTN_SHIPYARD_FILE
+
+      - name: configure_dynatrace_monitoring_for_project
+        run: keptn.sh configure monitoring dynatrace --project=$KEPTN_PROJECT
+
+      - name: create_service
+        run: keptn.sh create service $KEPTN_SERVICE --project=$KEPTN_PROJECT
+
+      - name: configure_service_with_dynatrace_query
+        run: keptn.sh add-resource --project=$KEPTN_PROJECT --stage=$KEPTN_STAGE --service=$KEPTN_SERVICE --resource=$DT_CONF_FILE --resourceUri=dynatrace/dynatrace.conf.yaml
