--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -8,9 +8,9 @@ on:
 
 env:
   EVALUATION_RULE: ignore #ignore, pass_on_warning, fail_on_warning
-  KEPTN_PROJECT: dt-orders
-  KEPTN_SERVICE: frontend
-  KEPTN_STAGE: staging
+  KEPTN_PROJECT: dynatrace
+  KEPTN_SERVICE: tnt-duke-svc
+  KEPTN_STAGE: production
   LABELS: "runId=${{ github.run_id }},executedBy=GitHub,Job=https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"            
   #START: "2021-06-09T21:00:00"
   #END: "2021-06-09T22:00:00"
@@ -37,8 +37,5 @@ jobs:
         DEBUG: ${{ env.DEBUG }}
 
     steps:
-      - name: keptn get project
-        run: keptn.sh get project
-      
       - name: SLO Evaluation
         run: slo-evaluation.sh
