--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -5,6 +5,9 @@
 name: SLO Evaluation
 on:
   workflow_dispatch:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '* * * * 5'
 
 env:
   EVALUATION_RULE: ignore #ignore, pass_on_warning, fail_on_warning
