adjust schedule to every 5 min

--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '* * * * 5'
+    - cron:  '5 * * * *'
 
 env:
   EVALUATION_RULE: ignore #ignore, pass_on_warning, fail_on_warning
