comment out workflow_dispatch

--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -4,7 +4,7 @@
 
 name: SLO Evaluation
 on:
-  workflow_dispatch:
+  #workflow_dispatch:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '*/5 * * * *'
