update project to dt-orders

--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -10,9 +10,9 @@ on:
 
 env:
   EVALUATION_RULE: ignore #ignore, pass_on_warning, fail_on_warning
-  KEPTN_PROJECT: dynatrace
-  KEPTN_SERVICE: tnt-duke-svc
-  KEPTN_STAGE: production
+  KEPTN_PROJECT: dt-orders
+  KEPTN_SERVICE: frontend
+  KEPTN_STAGE: staging
   LABELS: "runId=${{ github.run_id }},executedBy=GitHub,Job=https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"            
   #START: "2021-06-09T21:00:00"
   #END: "2021-06-09T22:00:00"
