--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -30,7 +30,7 @@ jobs:
       uses: fjogeleit/yaml-update-action@master
       with:
         valueFile: 'manifests/order-service.yml'
-        propertyPath: 'spec.template.metadata.labels."app.kubernetes.io/version"'
+        propertyPath: 'spec.template.metadata.labels.\"app.kubernetes.io/version\"'
         value: "${{ github.event.inputs.order-version }}"
         commitChange: true
         updateFile: true
