--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -27,13 +27,12 @@ jobs:
       uses: actions/checkout@master
       
     - name: Update order-service.yml
-      uses: fjogeleit/yaml-update-action@master
-      with:
-        valueFile: 'manifests/order-service.yml'
-        propertyPath: 'spec.template.metadata.labels.\"app.kubernetes.io/version\"'
-        value: "${{ github.event.inputs.order-version }}"
-        commitChange: true
-        updateFile: true
+      run: |
+        echo "Setting version to $NEW_VERSION"
+        MANIFEST_FILE=manifests/order-service.yml
+        sed -ie "s|version: .*$|version: \"${{ github.event.inputs.order-version }}\"|" $MANIFEST_FILE
+        sed -ie "s|image: dtdemos/dt-orders-order-service:.*$|image: dtdemos/dt-orders-order-service:${{ github.event.inputs.order-version }}|" $MANIFEST_FILE
+        cat $MANIFEST_FILE
 
     - name: "Set the target AKS cluster"
       uses: azure/aks-set-context@v1
