--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -33,9 +33,9 @@ jobs:
       
     - name: "Set new feature number"
       run: |
-        if [ "${{ github.event.action" == 'deploy1' }} ];then
+        if [ "${{ github.event.action == 'deploy1' }} ];then
           FEATURE_NUMBER='1'
-        elif [ "${{ github.event.action" == 'deploy2' }} ];then
+        elif [ "${{ github.event.action == 'deploy2' }} ];then
           FEATURE_NUMBER='2'
         elif [ -z ${{ github.event.inputs.order-version }};then
           FEATURE_NUMBER=${{ github.event.inputs.order-version }}
