--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -21,7 +21,7 @@ env:
   CLUSTER_NAME: jahn-aks-demo
   CLUSTER_RESOURCE_GROUP: jahn-aks-demo
   NAMESPACE: staging
-  FEATURE_NUMBER: '1'
+  VERSION_NUMBER: '1'
 
 jobs:
   deploy:
@@ -34,22 +34,22 @@ jobs:
     - name: "Set new feature number"
       run: |
         if [ "${{ github.event.action == 'deploy1' }} ];then
-          FEATURE_NUMBER='1'
+          VERSION_NUMBER='1'
         elif [ "${{ github.event.action == 'deploy2' }} ];then
-          FEATURE_NUMBER='2'
+          VERSION_NUMBER='2'
         elif [ -z ${{ github.event.inputs.order-version }};then
-          FEATURE_NUMBER=${{ github.event.inputs.order-version }}
+          VERSION_NUMBER=${{ github.event.inputs.order-version }}
         else
-          echo "Missing FEATURE_NUMBER argument"
+          echo "Missing VERSION_NUMBER argument"
           exit 1
         fi
       
     - name: Update order-service.yml
       run: |
-        echo "Setting feature to $NEW_VERSION"
+        echo "Setting manifest version to to $VERSION_NUMBER"
         MANIFEST_FILE=manifests/order-service.yml
-        sed -ie "s|version: .*$|version: \"${{ github.event.inputs.order-version }}\"|" $MANIFEST_FILE
-        sed -ie "s|image: dtdemos/dt-orders-order-service:.*$|image: dtdemos/dt-orders-order-service:${{ github.event.inputs.order-version }}|" $MANIFEST_FILE
+        sed -ie "s|version: .*$|version: \"$VERSION_NUMBER\"|" $MANIFEST_FILE
+        sed -ie "s|image: dtdemos/dt-orders-order-service:.*$|image: dtdemos/dt-orders-order-service:$VERSION_NUMBER|" $MANIFEST_FILE
         cat $MANIFEST_FILE
 
     - name: "Set the target AKS cluster"
@@ -67,7 +67,7 @@ jobs:
         manifests: |
           manifests/order-service.yml
         images: |
-          ${{ env.REGISTRY_NAME }}/dt-orders-order-service:${{ github.event.inputs.order-version }}
+          ${{ env.REGISTRY_NAME }}/dt-orders-order-service:$VERSION_NUMBER
 
     - name: "Dynatrace Deployment Event Order Service"
       uses: dynatrace-oss/dynatrace-github-action@v7
@@ -77,8 +77,8 @@ jobs:
         events: |
           - type: CUSTOM_DEPLOYMENT
             source: GitHub
-            deploymentName: "Deploy order version ${{ github.event.inputs.order-version }}"
-            deploymentVersion: "${{ github.event.inputs.order-version }}"
+            deploymentName: "Deploy order version $VERSION_NUMBER"
+            deploymentVersion: "$VERSION_NUMBER"
             deploymentProject: "dt-orders"
             ciBackLink: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"
             tags:
