--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -37,16 +37,17 @@ jobs:
           VERSION_NUMBER='1'
         elif [ "${{ github.event.action == 'deploy2' }} ];then
           VERSION_NUMBER='2'
-        elif [ -z ${{ github.event.inputs.order-version }};then
+        elif [ -z ${{ github.event.inputs.order-version }} ];then
           VERSION_NUMBER=${{ github.event.inputs.order-version }}
         else
           echo "Missing VERSION_NUMBER argument"
           exit 1
         fi
+        echo "Set VERSION_NUMBER to $VERSION_NUMBER"
       
     - name: Update order-service.yml
       run: |
-        echo "Setting manifest version to to $VERSION_NUMBER"
+        echo "Setting manifest version to $VERSION_NUMBER"
         MANIFEST_FILE=manifests/order-service.yml
         sed -ie "s|version: .*$|version: \"$VERSION_NUMBER\"|" $MANIFEST_FILE
         sed -ie "s|image: dtdemos/dt-orders-order-service:.*$|image: dtdemos/dt-orders-order-service:$VERSION_NUMBER|" $MANIFEST_FILE
