--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -21,6 +21,7 @@ env:
   CLUSTER_NAME: jahn-aks-demo
   CLUSTER_RESOURCE_GROUP: jahn-aks-demo
   NAMESPACE: staging
+  VERSION_NUMBER: '1'
 
 jobs:
   deploy:
@@ -33,11 +34,11 @@ jobs:
     - name: "Set new feature number"
       run: |
         if [ "${{ github.event.action == 'deploy1' }} ];then
-          export VERSION_NUMBER='1'
+          VERSION_NUMBER='1'
         elif [ "${{ github.event.action == 'deploy2' }} ];then
-          export VERSION_NUMBER='2'
+          VERSION_NUMBER='2'
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
-          export VERSION_NUMBER=${{ github.event.inputs.order-version }}
+          VERSION_NUMBER=${{ github.event.inputs.order-version }}
         else
           echo "Missing VERSION_NUMBER argument"
           exit 1
