--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -34,16 +34,17 @@ jobs:
     - name: "Set new feature number"
       run: |
         if [ "${{ github.event.action == 'deploy1' }} ];then
-          export VERSION_NUMBER='1'
+          VERSION_NUMBER='1'
         elif [ "${{ github.event.action == 'deploy2' }} ];then
-          export VERSION_NUMBER='2'
+          VERSION_NUMBER='2'
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
-          export VERSION_NUMBER=${{ github.event.inputs.order-version }}
+          VERSION_NUMBER=${{ github.event.inputs.order-version }}
         else
           echo "Missing VERSION_NUMBER argument"
           exit 1
         fi
         echo "Set VERSION_NUMBER to $VERSION_NUMBER"
+        echo "VERSION_NUMBER=$VERSION_NUMBER" >> $GITHUB_ENV
         echo "Set VERSION_NUMBER to ${{ env.VERSION_NUMBER }}"
 
     - name: Update order-service.yml
